--- a/notebooks/1_InferenceAndCausality_Week3_ObservationVsInterversion.ipynb
+++ b/notebooks/1_InferenceAndCausality_Week3_ObservationVsInterversion.ipynb
@@ -10,14 +10,14 @@
     "**Hands‑on Notebook**\n",
     "\n",
     "\n",
-    "**In this notebook**\n",
+    "**What you'll practice**\n",
     "1. Simulate observational vs interventional worlds (`P(Y|X)` vs `P(Y|do(X))`).\n",
     "2. See how **confounding** inflates correlations (firing squad toy model)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2ca1293e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f3cbb40c",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,9 @@
     "SB = (C & (rng.random(N) < 0.95)).astype(int)  # Squad B obeys if ordered\n",
     "\n",
     "# Lethality (set to 1 for simplicity, adjust if you want realism)\n",
-    "p_kill_A, p_kill_B = 1.0, 1.0\n",
+    "p_kill_A, p_kill_B = 1, 1\n",
+    "#hit_A = p_kill_A\n",
+    "#hit_B = p_kill_B\n",
     "hit_A = (SA & (rng.random(N) < p_kill_A)).astype(int)\n",
     "hit_B = (SB & (rng.random(N) < p_kill_B)).astype(int)\n",
     "D = np.maximum(hit_A, hit_B)\n",
@@ -163,11 +165,81 @@
     "   - Re-run and record `P(D|SA=0)` vs `P(D|do(SA=0))`.  \n",
     "   - Explain in one sentence which way confounding moves the observational estimate.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "08661a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observational world:\n",
+      "P(D=1 | SA=0) = 0.045  [n=52415]  (seeing)\n",
+      "\n",
+      "Interventional world:\n",
+      "P(D=1 | do(SA=0)) = 0.471  [n=100000]  (doing)\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100000\n",
+    "rng = np.random.default_rng(6)\n",
+    "\n",
+    "# Structural equations (binary)\n",
+    "C = rng.binomial(1, 0.5, size=N)  # Captain order\n",
+    "SA = (C & (rng.random(N) < 0.95)).astype(int)  # Squad A obeys if ordered\n",
+    "SB = (C & (rng.random(N) < 0.95)).astype(int)  # Squad B obeys if ordered\n",
+    "\n",
+    "# Lethality (set to 1 for simplicity, adjust if you want realism)\n",
+    "p_kill_A, p_kill_B = .6, .99\n",
+    "#hit_A = p_kill_A\n",
+    "#hit_B = p_kill_B\n",
+    "hit_A = (SA & (rng.random(N) < p_kill_A)).astype(int)\n",
+    "hit_B = (SB & (rng.random(N) < p_kill_B)).astype(int)\n",
+    "D = np.maximum(hit_A, hit_B)\n",
+    "\n",
+    "# Combine all simulated variables into a single DataFrame for easier analysis and plotting\n",
+    "obs_df = pd.DataFrame(dict(C=C, SA=SA, SB=SB, D=D))\n",
+    "\n",
+    "print(\"Observational world:\")\n",
+    "# Compute P(D=1 | SA=0)\n",
+    "p_obs = obs_df.loc[obs_df[\"SA\"] == 0, \"D\"].mean()\n",
+    "n_obs = (obs_df[\"SA\"] == 0).sum()\n",
+    "print(f\"P(D=1 | SA=0) = {p_obs:.3f}  [n={n_obs}]  (seeing)\")\n",
+    "\n",
+    "# --- Interventional: do(SA=0) ---\n",
+    "C2 = rng.binomial(1, 0.5, size=N)                   # captain as before\n",
+    "SA2 = np.zeros(N, dtype=int)                        # force A not to fire\n",
+    "SB2 = (C2 & (rng.random(N) < 0.95)).astype(int)     # B still reacts to captain\n",
+    "\n",
+    "hit_A2 = (SA2 & (rng.random(N) < p_kill_A)).astype(int)\n",
+    "hit_B2 = (SB2 & (rng.random(N) < p_kill_B)).astype(int)\n",
+    "D2 = np.maximum(hit_A2, hit_B2)\n",
+    "\n",
+    "do_df = pd.DataFrame(dict(C=C2, SA=SA2, SB=SB2, D=D2))\n",
+    "p_do = do_df[\"D\"].mean()\n",
+    "n_do = len(do_df)\n",
+    "\n",
+    "print(\"\\nInterventional world:\")\n",
+    "print(f\"P(D=1 | do(SA=0)) = {p_do:.3f}  [n={n_do}]  (doing)\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b75bf61",
+   "metadata": {},
+   "source": [
+    "## Answer\n",
+    "Confounding moves the observational estimate towards zero by a small fraction."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11.3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
